--- a/style.css
+++ b/style.css
@@ -1,5 +1,47 @@
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+}
+nav {
+  text-align: center;
+}
+nav > a {
+  padding-right: 10px;
+  padding-left: 10px;
+  background-color: lightgray
+}
+
+img.displayed {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+figcaption {
+  text-align: center;
+  font-size: small;
+}
+
+p.blocktext {
+  text-align: center;
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
+}
+
+#details {
+  text-align: center;
+}
+
+div {
+  float: left;
+  display: inline;
+  background-color: lightblue;
+  width: 25%
 }
